# CloudBlueprint

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  PLAN.md  README.md  docker-compose.yml  pyproject.toml
cloudblueprint/: __init__.py
cloudblueprint/backend/: __init__.py  main.py
cloudblueprint/backend/api/: __init__.py  routes.py  schemas.py
cloudblueprint/backend/database/: __init__.py  connection.py  models.py  repository.py
cloudblueprint/backend/generators/: __init__.py
cloudblueprint/backend/generators/terraform/: __init__.py  blocks.py  files.py  generator.py  naming.py
cloudblueprint/backend/models/: __init__.py  architecture.py  graph.py  relationships.py  resource.py
cloudblueprint/backend/services/: __init__.py  architecture_service.py  exceptions.py  terraform_service.py  validation_service.py
cloudblueprint/backend/validators/: __init__.py  base.py  compute.py  database.py  dependency.py  engine.py  loadbalancing.py  networking.py
cloudblueprint/frontend/: __init__.py  api_client.py  app.py
examples/: invalid_architecture.json  valid_architecture.json
tests/: conftest.py  test_api.py  test_database_repository.py  test_frontend.py  test_graph.py  test_resources.py  test_services.py  test_terraform_generation.py  test_validation.py
